<resources>
    <string name="app_name">MovieApp</string>
    <string name="plot">Plot</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="mu">mu</string>
    <string name="retry">Повторить</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="in_developing">In developing</string>
    <string name="search">Search</string>
    <string name="popular">Популярные</string>
    <string name="top_rated">Топ рейтинг</string>
    <string name="now_playing">Сейчас в кино</string>
    <string name="overview">Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
